--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
   "homepage": "https://github.com/SirAnthony/Klondike#readme",
   "dependencies": {
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
+    "bcrypt-nodejs": "0.0.3",
     "cookie": "^0.5.0",
     "intl": "^1.2.5",
     "koa": "^2.14.1",
-    "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-parameter": "^3.0.1",
@@ -41,6 +42,7 @@
     "koa-session": "^6.2.0",
     "koa-static": "^5.0.0",
     "koa-static-server": "^1.5.2",
+    "libphonenumber-js": "^1.10.15",
     "lodash.merge": "^4.6.2",
     "mongodb": "^4.12.1",
     "nunjucks": "^3.2.3",
@@ -49,6 +51,8 @@
     "passport-vkontakte": "^0.5.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcrypt-nodejs": "0.0.31",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-logger": "^3.1.2",
