--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-vkontakte": "^0.5.0"
+    "passport-vkontakte": "^0.5.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
