--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "konva": "^8.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4"
