--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-konva": "^18.2.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "use-image": "^1.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
