--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcrypt-nodejs": "0.0.31",
+    "@types/cypress": "^1.1.3",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-logger": "^3.1.2",
@@ -63,11 +64,14 @@
     "@types/koa-session": "^5.10.6",
     "@types/koa-static": "^4.0.2",
     "@types/lodash.merge": "^4.6.7",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.15",
     "@types/nunjucks": "^3.2.1",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
     "concurrently": "^7.6.0",
+    "cypress": "^12.9.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
