--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-vkontakte": "^0.5.0",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
@@ -69,6 +70,7 @@
     "@types/nunjucks": "^3.2.1",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
+    "@types/qrcode": "^1.5.0",
     "concurrently": "^7.6.0",
     "cypress": "^12.9.0",
     "mocha": "^10.2.0",
