--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/SirAnthony/Klondike#readme",
   "dependencies": {
+    "@koa/multer": "^3.0.2",
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "0.0.3",
@@ -46,6 +47,7 @@
     "libphonenumber-js": "^1.10.15",
     "lodash.merge": "^4.6.2",
     "mongodb": "^4.12.1",
+    "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -64,8 +66,10 @@
     "@types/koa-router": "^7.4.4",
     "@types/koa-session": "^5.10.6",
     "@types/koa-static": "^4.0.2",
+    "@types/koa__multer": "^2.0.4",
     "@types/lodash.merge": "^4.6.7",
     "@types/mocha": "^10.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.15",
     "@types/nunjucks": "^3.2.1",
     "@types/passport": "^1.0.11",
