--- a/setup/nginx.conf
+++ b/setup/nginx.conf
@@ -22,6 +22,11 @@ server {
          proxy_redirect off;
     }
 
+    error_page 500 502 503 504 /5xx.html;
+    location /5xx.html {
+        root /user/projects/Klondike/static/;
+    } 
+
     listen 443 ssl; # managed by Certbot
     listen [::]:443 ssl;
     ssl_certificate /etc/letsencrypt/live/klondike.in/fullchain.pem; # managed by Certbot
